--- a/Prometheus插件开发/AddRulesWeb/static/pages/delete.html
+++ b/Prometheus插件开发/AddRulesWeb/static/pages/delete.html
@@ -24,8 +24,8 @@
         </div>
 
         <div style="height: 30px ; position: absolute; top: 100px; width: 100%;">
-            <label style="width: 60%; height: 26px;background-color: lightcoral; text-align: center"><a href="javascript:del()" style="text-decoration: none ; color: white" >删除</a></label>
-            <label style="width: 40px; height: 26px; background-color: lightcoral"></label>
+            <label style="width: 60%; height: 26px;background-color: #0a6aa1; text-align: center"><a href="javascript:del()" style="text-decoration: none ; color: white" >删除</a></label>
+            <label style="width: 40px; height: 26px; background-color: #0a6aa1"></label>
             <!--coral-->
         </div>
 
@@ -42,7 +42,7 @@
             <div id="time_rules" style="margin-left: 10px">&nbsp;&nbsp;&nbsp;&nbsp;for:</div>
             <div style="margin-left: 10px">&nbsp;&nbsp;&nbsp;&nbsp;labels:</div>
             <div id="select_rules" style="margin-left: 10px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;level:</div>
-            <div style="margin-left: 10px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;service: "local-234"</div>
+            <div id="select_services" style="margin-left: 10px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;service:</div>
             <div style="margin-left: 10px">&nbsp;&nbsp;&nbsp;&nbsp;annotations:</div>
             <div style="margin-left: 10px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;summary: "告警主机和端口{{ $labels.instance }} 告警值：{{ $value }}"</div>
             <div id="desc_rules" style="margin-left: 10px">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;description:</div>
