--- a/Prometheus插件开发/AddRulesWeb/static/pages/delete.html
+++ b/Prometheus插件开发/AddRulesWeb/static/pages/delete.html
@@ -8,7 +8,7 @@
     <link href="../selectCss.css" rel="stylesheet">
 </head>
 
-<body style="">
+<body>
     <iframe style="position: absolute; left: 0; top: 0; width: 100%; height: 65px;" src="/static/pages/head.html" frameborder='0'></iframe>
 
     <div class="rules_add" style="position: absolute ; top: 70px">
